--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- description -->
 		<div>
+			<h1> Bonjour, je m'appelle Amine et je suis consultant chez BD. </h1>
 			<p> oui </p>
+		</div>
+		
+		<!-- recompense -->
+		<div>
+			<h1> Mes récompenses </h1>
+			<p> en construction ...  </p>
 		</div>
 		
 	</body>
