ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -19,15 +19,16 @@
 		
 		<!-- description -->
 		<div>
-			<h1> Bonjour, je m'appelle Amine et je suis consultant chez BD. </h1>
-			<p> oui </p>
+			<h1> Ma description </h1>
+			<p> Bonjour, je m'appelle Amine et je suis consultant chez BD. </p>
 		</div>
 		
-		<!-- recompense -->
+		<!-- mon gist -->
 		<div>
-			<h1> Mes récompenses </h1>
-			<p> en construction ...  </p>
+			<h1> Mon gist </h1>
+			<p> <script src="https://gist.github.com/AmineAhmidouchBD/d44a0f74939784741113d1f79d207c7a.js"></script> </p>
 		</div>
+		
 		
 	</body>
 </html>
