--- a/hello.html
+++ b/hello.html
@@ -23,6 +23,12 @@
 			<p> Bonjour, je m'appelle Amine et je suis consultant chez BD. </p>
 		</div>
 		
+		<!-- recompense -->
+		<div>
+			<h1> Mes récompenses </h1>
+			<p> <img src= "images\medal_bronze.png"> </p>
+		</div>
+		
 		<!-- mon gist -->
 		<div>
 			<h1> Mon gist </h1>
